# dumpulator

./: .gitignore  Dockerfile  README.md  build.docker  entrypoint.sh  pyproject.toml
dumps/: .gitignore
minidump/: .gitignore  CMakeLists.txt  README.md
minidump/cmake/: minidumpConfig.cmake.in
minidump/examples/: debug_dump.cpp  parse_dump.cpp  struct_debug.cpp
minidump/include/minidump/: minidump.hpp
minidump/src/: minidump.cpp
tests/: emulate-process.py  exception-test32.py  exception-test64.py  getting-started.py  getting-started32.py
