[project]
name = "dumpulator"
version = "1.0.2"
description = "An easy-to-use library for emulating code in minidump files."
authors = [{name = "Duncan Ogilvie", email = "dumpulator@mrexodia.re"}, {name = "redthing1", email = "redthing1@alt.icu"}]
readme = "README.md"
license = {text = "BSL-1.0"}
requires-python = ">=3.9"
dependencies = [
    "unicorn==2.0.1.post1",
    "pefile>=2021.9.3",
    "capstone>=5.0.6",
    "setuptools<79.0.0",
    "typer>=0.16.0",
    "sh>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "libclang~=15.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dumpulator", "src/minidump"]
